fix: 권한못가져오는 오류 해결