@@ -3,8 +3,9 @@ package com.ticketing.global.config.jwt;
 import com.ticketing.domain.member.admin.entity.Admin;
 import com.ticketing.domain.member.customer.entity.Customer;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 public class CustomUserDetails {
@@ -22,7 +23,7 @@ public class CustomUserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-      return Collections.emptyList();
+      return List.of(new SimpleGrantedAuthority(customer.getRole().toString()));
     }
 
     @Override
@@ -73,7 +74,7 @@ public class CustomUserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-      return Collections.emptyList();
+      return List.of(new SimpleGrantedAuthority(admin.getRole().toString()));
     }
 
     @Override
@@ -111,7 +112,6 @@ public class CustomUserDetails {
     public boolean isEnabled() {
       return false;
     }
-
   }
 
 }
